[package]
name = "decaf-lsp"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.8"
jsonrpc-core = "14.0"
tokio = { version = "0.2", features = ["io-std", "macros"]}
serde_json = "1.0.41"
simple-logging = "2.0.2"
log = "0.4.8"
syntax = { git = "https://github.com/jiegec/decaf-rs", branch = "dev" }
common = { git = "https://github.com/jiegec/decaf-rs", branch = "dev" }
typeck = { git = "https://github.com/jiegec/decaf-rs", branch = "dev" }